--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Game Time</title>
+  <title>Tron</title>
 </head>
 <body>
+<canvas id="game" width="450" height="450"></canvas>
 
-  <script src="main.bundle.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+<script src="main.bundle.js"></script>
 </body>
 </html>
