--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
   <link rel="stylesheet" type="text/css" href="/lib/application.css">
 </head>
 <body>
-  <canvas id="game" width="1200" height="600">
-  </canvas>
+  <canvas id="game" width="1200" height="600"></canvas>
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
   <script src="main.bundle.js"></script>
 </body>
 </html>
