--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
   <title>Test Suite - Game Time</title>
 </head>
 <body>
-
+  <canvas id="game" width="0" height="0"></canvas>
 
   <script src="test.bundle.js"></script>
 </body>
