--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <canvas id="game" width="1200" height="600"></canvas>
-
+  <!-- <audio id="audio" src="./lib/sandstorm.mp3" autoplay controls loop></audio> -->
   <script src="main.bundle.js"></script>
 </body>
 </html>
