fix end game message to display on top of game

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <link rel="stylesheet" type="text/css" href="/lib/application.css">
 </head>
 <body>
-  <canvas id="game" width="1200" height="600"></canvas>
+  <canvas id="game" width="1200" height="600">
+  </canvas>
+    <div id="end"><p>"Game Over! Press 'enter' to play again"</p></div>
   <!-- <audio id="audio" src="./lib/sandstorm.mp3" autoplay controls loop></audio> -->
   <script src="main.bundle.js"></script>
 </body>
