center audio controls on view

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <canvas id="game" width="1200" height="600">
   </canvas>
     <div id="end"><p>"Game Over! Press 'enter' to play again"</p></div>
-  <!-- <audio id="audio" src="./lib/sandstorm.mp3" autoplay controls loop></audio> -->
+  <audio id="audio" src="./lib/sandstorm.mp3" autoplay controls loop></audio>
   <script src="main.bundle.js"></script>
 </body>
 </html>
