refactor index.js

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Tron</title>
-  <link rel="stylesheet" type="text/css" href="/lib/application.css">
-</head>
-<body>
-  <canvas id="game" width="1200" height="600">
-  </canvas>
+  <head>
+    <meta charset="utf-8">
+    <title>Tron</title>
+    <link rel="stylesheet" type="text/css" href="/lib/application.css">
+  </head>
+  <body>
+    <canvas id="game" width="1200" height="600"></canvas>
+
     <div id="end"><p>"Game Over! Press 'enter' to play again"</p></div>
-  <audio id="audio" src="./lib/sandstorm.mp3" autoplay controls loop></audio>
-  <script src="main.bundle.js"></script>
-</body>
+
+    <audio id="audio" src="./lib/sandstorm.mp3" autoplay controls loop></audio>
+
+    <script src="main.bundle.js"></script>
+  </body>
 </html>
