Fix key bindings that were comparing strings instead of integers. Change and style end game message

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   <body>
     <canvas id="game" width="800" height="480"></canvas>
 
-    <div id="end"><p>"Game Over! Press 'enter' to play again"</p></div>
+    <div id="end">
+      <p>Game Over</p>
+      <p>Press 'enter' to play again</p>
+    </div>
 
     <audio id="audio" src="./lib/sandstorm.mp3" autoplay controls loop></audio>
 
