Reorganize lib folder

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Tron</title>
-    <link rel="stylesheet" type="text/css" href="/lib/application.css">
+    <link rel="stylesheet" type="text/css" href="application.css">
   </head>
   <body>
     <canvas id="game" width="800" height="480"></canvas>
@@ -13,7 +13,7 @@
       <p>Press 'enter' to play again</p>
     </div>
 
-    <audio id="audio" src="./lib/sandstorm.mp3" autoplay controls loop></audio>
+    <audio id="audio" src="./lib//assets/sandstorm.mp3" autoplay controls loop></audio>
 
     <script src="main.bundle.js"></script>
   </body>
