--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Tron</title>
+    <link href='https://fonts.googleapis.com/css?family=Orbitron:400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="application.css">
   </head>
   <body>
@@ -12,6 +13,7 @@
       <h1>Instructions</h1>
       <p>Avoid colliding with the walls and the other player.</p>
       <p>Winner stays alive longest.</p>
+      <p>Press "enter" to play.</p>
       <table>
         <thead>
           <tr>
@@ -55,10 +57,10 @@
 
     <div id="end">
       <p>Game Over</p>
-      <p>Press 'enter' to play again</p>
+      <p>Press "enter" to play again</p>
     </div>
 
-    <!-- <audio id="audio" src="./lib//assets/sandstorm.mp3" autoplay controls loop></audio> -->
+    <audio id="audio" src="./lib/assets/sandstorm.mp3" autoplay controls loop></audio>
 
     <script src="main.bundle.js"></script>
   </body>
