fix typo in instructions

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 
           <tr>
             <td class="buttons">W: Up</td>
-            <td class="buttons">Up Array: Up</td>
+            <td class="buttons">Up Arrow: Up</td>
           </tr>
 
           <tr>
             <td class="buttons">S: Down</td>
-            <td class="buttons">Down Array: Down</td>
+            <td class="buttons">Down Arrow: Down</td>
           </tr>
         </tbody>
       </table>
