Fix holding down enter bug

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
     <div id="instructions">
       <h1>Instructions</h1>
       <p>Avoid colliding with the walls and the other player.</p>
-      <p>Winner stays alive longest.</p>
-      <p>Press "enter" to play.</p>
       <table>
         <thead>
           <tr>
@@ -53,6 +51,8 @@
           </tr>
         </tbody>
       </table>
+      <br>
+      <p id="play-game">Press "enter" to play.</p>
     </div>
 
     <div id="end">
