Add flashing start game message in instructions

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
       <table>
         <thead>
           <tr>
-            <th>Player 1</th>
-            <th>Player 2</th>
+            <th><span id="player1">Player 1</span></th>
+            <th><span id="player2">Player 2</span></th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td class="color">Color: Blue</td>
-            <td class="color">Color: Yellow</td>
-          </tr>
+          <!--<tr>-->
+            <!--<td class="color">Color: Blue</td>-->
+            <!--<td class="color">Color: Yellow</td>-->
+          <!--</tr>-->
 
           <tr>
             <td class="controls">Controls</td>
@@ -52,7 +52,8 @@
         </tbody>
       </table>
       <br>
-      <p id="play-game">Press "enter" to play.</p>
+      <br>
+      <p id="start-game">Press "enter" to play.</p>
     </div>
 
     <div id="end">
