change name of game on load page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <canvas id="game" width="800" height="480"></canvas>
 
     <div id="instructions">
-      <h1>Instructions</h1>
+      <h1>Tron</h1>
       <p>Avoid colliding with the walls and the other player.</p>
       <table>
         <thead>
